PharmaDemo/src/objects/Invitation__c.object
<CustomObject>
    <description>Track survey invitations by survey, contact and email sent</description>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the contact has used this invitation</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invitations</relationshipLabel>
        <relationshipName>Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invite_Code__c</fullName>
        <label>InviteCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invite_Code_text__c</fullName>
        <formula>Invite_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invite Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invite_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>set by the system when an email is sent using this invitation</inlineHelpText>
        <label>Invite Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_URL__c</fullName>
        <formula>Survey__r.Site_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Link__c</fullName>
        <description>build the survey link to be used in the outbound email</description>
        <formula>if (  RIGHT(Site_URL__c, 1) == &apos;/&apos; ,
HYPERLINK( Site_URL__c &amp; &apos;surveyWizard?inv=&apos;&amp; Invite_Code__c , &apos;Launch Survey&apos; , &apos;_blank&apos; ) ,

HYPERLINK( Site_URL__c &amp; &apos;/surveyWizard?inv=&apos;&amp; Invite_Code__c , &apos;Launch Survey&apos; , &apos;_blank&apos; )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Invitations</relationshipLabel>
        <relationshipName>Invitations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, IMAGE(&quot;/img/icon/tasks16.gif&quot;, &quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subject__c</fullName>
        <formula>Survey__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <label>Invitation</label>
    <nameField>
        <displayFormat>NVT-{0000}</displayFormat>
        <label>Invitation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invitations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>